tests/ui/fail/enum_not_supported.rs
use field_accessor::FieldAccessor;

#[derive(FieldAccessor)]
enum Example {
    Variant,
}

fn main() {}
