tests/ui/fail/enum_not_supported.stderr
error: proc-macro derive panicked
 --> tests/ui/fail/enum_not_supported.rs:3:10
  |
3 | #[derive(FieldAccessor)]
  |          ^^^^^^^^^^^^^
  |
  = help: message: Enum is not supported. Only struct is supported
